change font sizing and add links in nav bar

--- a/pages/greece.html
+++ b/pages/greece.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class = "header-display">
-        <h3 class= "header-display--text">Travel Site</h3>
+        <h3 class= "header-display--text"><a href="../index.html" class="link-styling">Travel Site</a></h3>
         <ul class = "header-display--sites">
             <li><a href="../index.html">Home</a></li>
             <li> <a href="hawaii.html">Hawaii</a></li>
