--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class = "header-display">
-        <h3 class= "header-display--text">Travel Site</h3>
+        <h3 class= "header-display--text"><a href="index.html" class="link-styling">Travel Site</a></h3>
         <ul class = "header-display--sites">
             <li><a class="header-display--sites__active" href="index.html">Home</a></li>
             <li><a href="pages/hawaii.html">Hawaii</a></li>
-            <li>Iceland</li>
-            <li>Greece</li>
+            <li><a href="pages/iceland.html">Iceland</a></li>
+            <li><a href="pages/greece.html">Greece</a></li>
         </ul>
     </div>
     <div class="hero">
